--- a/index.html
+++ b/index.html
@@ -26,14 +26,18 @@
             <img id="img2" class="robot-chess history-elements" src="./pics/images.jfif">
         </div>
     </div>
-    <div class="third">
+    <div class="third" id="third">
+        <img class="city" id="city" src="./pics/header-PhotoRoom.png-PhotoRoom.png  ">
+        <img class="presenter" id="presenter" src="./pics/Apdata_Robot-removebg-preview.png">
         <div id="thirdInner" class="third-inner">
-            <p>From virtual assistants to self-driving cars, AI has revolutionized numerous industries and has become an indispensable tool for solving some of the world's most complex problems. </p>
+            <p>From virtual assistants to self-driving cars, AI has revolutionized numerous industries and has become an indispensable tool for solving some of the world's most complex problems. With Github Copilot, AI is changing the way we write code and speeding up the development process. From Chess to Go, board games have long been a testing ground for AI, challenging machine learning algorithms to outsmart even the most skilled human players.</p>
         </div>
     </div>
     <div class="fourth">Div4</div>
     <div class="fifth">Div5</div>
     <script>
+        const presenter = document.getElementById("presenter");
+        const city = document.getElementById("city");
         const thirdInner = document.getElementById("thirdInner");
         const his1 = document.getElementById("his1");
         const his2 = document.getElementById("his2");
@@ -44,10 +48,12 @@
         const buildRobot = document.getElementById("buildRobot");
         let oneTime = false;
         let oneTime2 = false;
+        const third = document.getElementById("third");
         window.addEventListener("scroll", () => {
             holdingChip.style.transform = `translateY(${-window.pageYOffset}px)`;
             robotsFinger.style.transform = `translateY(${-window.pageYOffset}px)`;
             title.style.transform = `translateY(${-window.pageYOffset*0.4}px)`;
+            window.pageYOffset < 700 ? city.style.visibility = 'hidden': city.style.visibility = 'visible';
             if( window.pageYOffset > 640 && !oneTime){
                 let num1 = 1;
                 let num2 = 49;
@@ -61,18 +67,34 @@
                     setTimeout(()=> clearInterval(inter), 1200);
                 }, 25)
             }
-            if(window.pageYOffset > 970  && !oneTime2){
-                let one = 1;
-                const smallNum = 0.01;
+            window.pageYOffset > 1000? city.style.display = 'block':null;
+            if(window.pageYOffset > 1150  && !oneTime2){
+                let one = 1, a = 1.1, b = 1, c = 180, d = 270;
+                const smallNum = 0.009;
+                let x = third.offsetWidth;
+                let y = third.offsetHeight;
                 const interval2 = setInterval(() => {
-                    // thirdInner.style.width = `${thirdInner.offsetWidth + 1}px`;
-                    // thirdInner.style.height = `${thirdInner.offsetHeight + 1}px`;
                     thirdInner.style.transform = `scale(${one})`;
                     one += smallNum;
-                }, 5)
+                    console.log(x)
+                    city.style.width = `${x - x*1/100}px`;
+                    city.style.height = `${y - y*1/100}px`;
+                    // third.style.backgroundSize = `${x - x*1/100}px ${y - y*1/100}px`;
+                    // third.style.transform = "scale()";
+                    x -= x*1/100;
+                    y -= y*1/100;
+                    city.style.transform = `translate(${a}px, ${a}px)`
+                    a++;
+                    b++;
+                    presenter.style.width = `${c + c*0.4/100}px`;
+                    presenter.style.height = `${d + d*0.4/100}px`;
+                    c += c*0.4/100;
+                    d += d*0.4/100;
+                }, 15)
                 setTimeout(() => {
                     clearInterval(interval2);
-                }, 500)
+                }, 1000)
+                city.style.position = "fixed";
                 oneTime2 = true;
             }            
         })
