--- a/Ali-Ayb/detailed-history.html
+++ b/Ali-Ayb/detailed-history.html
@@ -5,12 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="detailed-history-style.css">
     <title>Detailes history</title>
 </head>
 
 <body>
+    <div class="wrapper">
+        <header>
 
+            <img src="assets/wallpapers/Polygon Luminary.svg" class="background">
+
+            <h1 class="detailed-history-title">Artificial Intelligence History</h1>
+
+
+        </header>
+    </div>
 
 </body>
 
