added the first section of detailed history

--- a/Ali-Ayb/detailed-history.html
+++ b/Ali-Ayb/detailed-history.html
@@ -11,14 +11,25 @@
 
 <body>
     <div class="wrapper">
-        <header>
 
-            <img src="assets/wallpapers/Polygon Luminary.svg" class="background">
+        <img src="assets/wallpapers/Polygon Luminary.svg" class="background">
 
-            <h1 class="detailed-history-title">Artificial Intelligence History</h1>
+        <h1 class="detailed-history-title">Artificial Intelligence History</h1>
 
-
-        </header>
+        <div class="container1">
+            <p class="history-parag1">Alan Turing, widely regarded as the
+                father of modern computing, laid the
+                foundation for the development
+                of AI with his
+                groundbreaking work on machine intelligence in 1942. During World War II, he created the first computing
+                machine, which
+                was used to crack Nazi codes and ultimately played a crucial role in the Allies' victory. This early
+                work on machine
+                intelligence set the stage for decades of research and development that has led to the advanced AI
+                technologies we see
+                today, with applications in healthcare, finance, transportation, and many other industries.</p>
+            <img class="history-img1" src="assets\turing blinders.png">
+        </div>
     </div>
 
 </body>
