added detailed history section2

--- a/Ali-Ayb/detailed-history.html
+++ b/Ali-Ayb/detailed-history.html
@@ -30,6 +30,21 @@
                 today, with applications in healthcare, finance, transportation, and many other industries.</p>
             <img class="history-img1" src="assets\turing blinders.png">
         </div>
+        <div class="container1">
+            <img class="history-img2" src="assets\chess-ai.gif">
+            <p class="history-parag2">Alan Turing, widely regarded as the
+                In 1997, IBM's Deep Blue made history by defeating world chess champion Garry Kasparov in a six-game
+                match. This marked
+                a significant milestone in the development of AI, as it demonstrated that computers could be programmed
+                to outthink and
+                outmaneuver the best human players in a game that was widely considered a benchmark for human
+                intelligence. The
+                technology behind Deep Blue's success paved the way for further advancements in AI, including the
+                development of machine
+                learning algorithms and neural networks that are capable of analyzing vast amounts of data and making
+                decisions based on
+                that analysis.</p>
+        </div>
     </div>
 
 </body>
