--- a/Ali-Ayb/detailed-history.html
+++ b/Ali-Ayb/detailed-history.html
@@ -30,11 +30,10 @@
                 today, with applications in healthcare, finance, transportation, and many other industries.</p>
             <img class="history-img1" src="assets\turing blinders.png">
         </div>
-        <div class="container1">
+        <div class="container2">
             <img class="history-img2" src="assets\chess-ai.gif">
-            <p class="history-parag2">Alan Turing, widely regarded as the
-                In 1997, IBM's Deep Blue made history by defeating world chess champion Garry Kasparov in a six-game
-                match. This marked
+            <p class="history-parag2">In 1997, IBM's Deep Blue made history by defeating world chess champion Garry
+                Kasparov in a six-game match. This marked
                 a significant milestone in the development of AI, as it demonstrated that computers could be programmed
                 to outthink and
                 outmaneuver the best human players in a game that was widely considered a benchmark for human
@@ -44,6 +43,23 @@
                 learning algorithms and neural networks that are capable of analyzing vast amounts of data and making
                 decisions based on
                 that analysis.</p>
+        </div>
+        <div class="container3">
+            <p class="history-parag3">In 2016, Google DeepMind's AlphaGo made a major breakthrough in the development of
+                AI by beating the world's strongest
+                Go player, Lee Sedol, in a five-game match held at the Four Seasons Hotel in Seoul's Gwanghwamun
+                district. The game of
+                Go was considered by many to be too complex for computers to master, due to the game's vast number of
+                possible moves and
+                the importance of intuition and strategic thinking. AlphaGo's victory marked a significant milestone in
+                the development
+                of AI, demonstrating that machines could be programmed to excel at tasks that require creativity and
+                intuition. The
+                achievement also paved the way for further breakthroughs in AI research and development, with potential
+                applications in
+                fields such as medicine, finance, and environmental science.</p>
+            <img class="history-img3" src="assets\go-image.jpg">
+
         </div>
     </div>
 
