--- a/hassan-bachir/current-aplication.html
+++ b/hassan-bachir/current-aplication.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="current-application-style.css">
-    <title>Detailes history</title>
+    <title>AI Current Applications</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         <h1 class="title">Top AI applications in 2023</h1>
 
         <div class="container1">
-            <p class="parag1"><span class="bold">AI Application in E-Commerce</span>Artificial Intelligence technology is used to create 
+            <p class="parag1"><span class="bold">AI Application in E-Commerce: </span>Artificial Intelligence technology is used to create 
                 recommendation engines through which you can engage better 
                 with your customers. These recommendations are made in accordance with their browsing history, preference, and interests.
                  It helps in improving your relationship with your customers and their loyalty towards your brand.</p>
@@ -26,7 +26,7 @@
         <div class="container2">
             <img class="img2" src="assets/teacher-robot.png">
             <p class="parag2">
-                <span class="bold">Applications Of Artificial Intelligence in Education</span>
+                <span class="bold">Applications Of Artificial Intelligence in Education: </span>
                 Although the education sector is the one most influenced by humans,
                  Artificial Intelligence has slowly begun to seep its roots into the 
                  education sector as well. Even in the education sector, this slow 
@@ -36,7 +36,7 @@
         </div>
         <div class="container3">
             <p class="parag3">
-                <span class="bold">Creating Smart Content</span>
+                <span class="bold">Creating Smart Content: </span>
                 Digitization of content like video lectures, conferences, and textbook 
                 guides can be made using Artificial Intelligence. We can apply different 
                 interfaces like animations and learning content through customization for 
