--- a/Ali-Ayb/detailed-history.html
+++ b/Ali-Ayb/detailed-history.html
@@ -17,7 +17,7 @@
         <h1 class="detailed-history-title">Artificial Intelligence History</h1>
 
         <div class="container1">
-            <p class="history-parag1">Alan Turing, widely regarded as the
+            <p class="history-parag1"><span class="bold">Alan Turing</span>, widely regarded as the
                 father of modern computing, laid the
                 foundation for the development
                 of AI with his
@@ -32,7 +32,8 @@
         </div>
         <div class="container2">
             <img class="history-img2" src="assets\chess-ai.gif">
-            <p class="history-parag2">In 1997, IBM's Deep Blue made history by defeating world chess champion Garry
+            <p class="history-parag2">In 1997, IBM's Deep Blue made history by <span class="bold">defeating world chess
+                    champion</span> Garry
                 Kasparov in a six-game match. This marked
                 a significant milestone in the development of AI, as it demonstrated that computers could be programmed
                 to outthink and
@@ -45,7 +46,8 @@
                 that analysis.</p>
         </div>
         <div class="container3">
-            <p class="history-parag3">In 2016, Google DeepMind's AlphaGo made a major breakthrough in the development of
+            <p class="history-parag3">In 2016, <span class="bold">Google DeepMind's AlphaGo</span> made a major
+                breakthrough in the development of
                 AI by beating the world's strongest
                 Go player, Lee Sedol, in a five-game match held at the Four Seasons Hotel in Seoul's Gwanghwamun
                 district. The game of
