added section2 for detailed future applications

--- a/Ali-Ayb/detailed-future-applications.html
+++ b/Ali-Ayb/detailed-future-applications.html
@@ -34,7 +34,24 @@
             <img class="future-img1"
                 src="assets\Tech_companies__development_of_AI_is__unethical__says_Robot_Love_curator-removebg-preview.png">
         </div>
+        <div class="container2">
+            <img class="future-img2" src="assets\Screenshot_2023-02-19_195312-removebg-preview.png">
 
+            <p class="future-parag2"><span class="bold">AI-powered nannies</span> are expected to revolutionize
+                child-rearing by providing 24/7
+                personalized care and education. With
+                the ability to monitor a child's activities, an AI nanny can provide real-time updates and
+                recommendations to parents,
+                ensuring the child's needs are met. The AI nanny can also create a customized curriculum based on the
+                child's learning
+                style and interests, offering interactive lessons, games, and activities to engage the child and help
+                them learn new
+                skills. Additionally, the AI nanny can provide increased safety by detecting potential hazards, offer
+                convenience for
+                parents with more flexibility in their schedules, and even emotional support and companionship for
+                children who may need
+                it.</p>
+        </div>
 
     </div>
 
