section 2 and 3 are edited

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
         <img class="robot-finger" id="robotsFinger" src="./pics/robotsFinger.png">
     </div>
     <div class="second">
+        <img class="binary" src="./pics/85-854922_code-transparent-binary-picture-black-and-white-stock-removebg-preview (1).png">
+        <img class="magnifier" src="./pics/magnifieer-removebg-preview.png">
         <div class="history history1" id="his1">
             <p id="line1" class="history-elements line1">AI started when Alan Turing the father of modern computing laid the foundation for AI with his groundbreaking work on machine intelligence.</p>
-            <img id="img1" class="alan history-elements" src="./pics/alanTurning.jfif">
+            <img id="img1" class="alan history-elements" src="./pics/_82768025_tv012402748.jpg">
         </div>
         <div class="history history2" id="his2">
             <p id="line2" class="history-elements line2">1997: IBM's Deep Blue defeats world chess champion Garry Kasparov, marking a significant milestone in the development of AI.</p>
