all pages added to pages folder, empty lines are deleted

--- a/pages/current-aplication.html
+++ b/pages/current-aplication.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/current-application-style.css">
+    <link rel="stylesheet" href="../styles/current-application-style.css">
     <title>AI Current Applications</title>
 </head>
-
 <body>
     <div class="wrapper">
-
-        <img src="assets/wallpapers/Hexagon (1).svg" class="background">
-
+        <img src="../assets/wallpapers/Hexagon (1).svg" class="background">
         <h1 class="title">Top AI applications in 2023</h1>
-
         <div class="container1">
             <p class="parag1"><span class="bold">AI Application in E-Commerce: </span>Artificial Intelligence technology
                 is used to create
@@ -23,10 +18,10 @@
                 with your customers. These recommendations are made in accordance with their browsing history,
                 preference, and interests.
                 It helps in improving your relationship with your customers and their loyalty towards your brand.</p>
-            <img class="img1" src="assets/e-commerce.png">
+            <img class="img1" src="../assets/e-commerce.png">
         </div>
         <div class="container2">
-            <img class="img2" src="assets/teacher-robot.png">
+            <img class="img2" src="../assets/teacher-robot.png">
             <p class="parag2">
                 <span class="bold">Applications Of Artificial Intelligence in Education: </span>
                 Although the education sector is the one most influenced by humans,
@@ -47,15 +42,11 @@
                 and integral lesson plans.
 
             </p>
-            <img class="img3" src="assets/smart-content.png">
-
+            <img class="img3" src="../assets/smart-content.png">
         </div>
-
         <div class="references">
-
             <h4>REFERENCES</h4>
             <ul>
-
                 <li><a
                         href="https://www.simplilearn.com/tutorials/artificial-intelligence-tutorial/artificial-intelligence-applications">AI
                         Applications: Top 18 Artificial Intelligence Applications in 2023</a></li>
@@ -65,13 +56,8 @@
                     </a></li>
                 <li><a href="https://techemergent.com/applications-of-artificial-intelligence/">Applications of
                         Artificial Intelligence</a></li>
-
             </ul>
         </div>
-
-
     </div>
-
 </body>
-
 </html>
