--- a/pages/detailed-history.html
+++ b/pages/detailed-history.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/detailed-history-style.css">
+    <link rel="stylesheet" href="../styles/detailed-history-style.css">
     <title>Detailes history</title>
 </head>
-
 <body>
     <div class="wrapper">
-
-        <img src="assets/wallpapers/Polygon Luminary.svg" class="background">
-
+        <img src="../assets/wallpapers/Polygon Luminary.svg" class="background">
         <h1 class="detailed-history-title">Artificial Intelligence History</h1>
-
         <div class="container1">
             <p class="history-parag1"><span class="bold">Alan Turing</span>, widely regarded as the
                 father of modern computing, laid the
@@ -28,10 +23,10 @@
                 intelligence set the stage for decades of research and development that has led to the advanced AI
                 technologies we see
                 today, with applications in healthcare, finance, transportation, and many other industries.</p>
-            <img class="history-img1" src="assets\turing blinders.png">
+            <img class="history-img1" src="../assets\turing blinders.png">
         </div>
         <div class="container2">
-            <img class="history-img2" src="assets\chess-ai.gif">
+            <img class="history-img2" src="../assets\chess-ai.gif">
             <p class="history-parag2">In 1997, IBM's Deep Blue made history by <span class="bold">defeating world chess
                     champion</span> Garry
                 Kasparov in a six-game match. This marked
@@ -60,11 +55,8 @@
                 achievement also paved the way for further breakthroughs in AI research and development, with potential
                 applications in
                 fields such as medicine, finance, and environmental science.</p>
-            <img class="history-img3" src="assets\go-image.jpg">
-
+            <img class="history-img3" src="../assets\go-image.jpg">
         </div>
     </div>
-
 </body>
-
 </html>
