--- a/pages/detailed-future-applications.html
+++ b/pages/detailed-future-applications.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/detailed-future-applications-style.css">
+    <link rel="stylesheet" href="../styles/detailed-future-applications-style.css">
     <title>Detailes history</title>
 </head>
-
 <body>
     <div class="wrapper">
-
-        <img src="assets\wallpapers\Circuit Board.svg" class="background">
-
+        <img src="../assets\wallpapers\Circuit Board.svg" class="background">
         <h1 class="detailed-future-app-title">AI Future Applications</h1>
-
         <div class="container1">
             <p class="future-parag1"><span class="bold">AI-powered nannies</span> are expected to revolutionize
                 child-rearing by providing 24/7
@@ -32,11 +27,10 @@
                 children who may need
                 it.</p>
             <img class="future-img1"
-                src="assets\Tech_companies__development_of_AI_is__unethical__says_Robot_Love_curator-removebg-preview.png">
+                src="../assets\Tech_companies__development_of_AI_is__unethical__says_Robot_Love_curator-removebg-preview.png">
         </div>
         <div class="container2">
-            <img class="future-img2" src="assets\Screenshot_2023-02-19_195312-removebg-preview.png">
-
+            <img class="future-img2" src="../assets\Screenshot_2023-02-19_195312-removebg-preview.png">
             <p class="future-parag2"><span class="bold">AI-powered nannies</span> are expected to revolutionize
                 child-rearing by providing 24/7
                 personalized care and education. With
@@ -52,9 +46,6 @@
                 children who may need
                 it.</p>
         </div>
-
     </div>
-
 </body>
-
 </html>
