README file has been edited

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Story Of AI</title>
     <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
@@ -20,6 +20,7 @@
             <p id="line1" class="history-elements line1">AI started when Alan Turing the father of modern computing laid the foundation for AI with his groundbreaking work on machine intelligence.</p>
             <img id="img1" class="alan history-elements" src="./pics/_82768025_tv012402748.jpg">
         </div>
+        <a class="history-read-more" href="./pages/detailed-history.html">read more</a>
         <div class="history history2" id="his2">
             <p id="line2" class="history-elements line2">1997: IBM's Deep Blue defeats world chess champion Garry Kasparov, marking a significant milestone in the development of AI.</p>
             <img id="img2" class="robot-chess history-elements" src="./pics/images.jfif">
@@ -27,7 +28,7 @@
     </div>
     <div class="third" id="third">
         <img class="city" id="city" src="./pics/header-PhotoRoom.png-PhotoRoom.png  ">
-        <img class="presenter" id="presenter" src="./pics/Apdata_Robot-removebg-preview.png">
+        <a><img class="presenter" id="presenter" src="./pics/Apdata_Robot-removebg-preview.png"></a>
         <a href="" style="display: block;"></a><div id="thirdInner" class="third-inner">
             <p>From virtual assistants to self-driving cars, AI has revolutionized numerous industries and has become an indispensable tool for solving some of the world's most complex problems. With Github Copilot, AI is changing the way we write code and speeding up the development process. From Chess to Go, board games have long been a testing ground for AI, challenging machine learning algorithms to outsmart even the most skilled human players.</p>
         </div></a>
@@ -105,7 +106,7 @@
                 }, 20)
                 setTimeout(() => {
                     clearInterval(interval2);
-                }, 1000)
+                }, 1200)
                 city.style.position = "fixed";
                 oneTime2 = true;
             }            
