links to other pages are added to main page

--- a/index.html
+++ b/index.html
@@ -28,22 +28,23 @@
     </div>
     <div class="third" id="third">
         <img class="city" id="city" src="./pics/header-PhotoRoom.png-PhotoRoom.png  ">
-        <a><img class="presenter" id="presenter" src="./pics/Apdata_Robot-removebg-preview.png"></a>
-        <a href="" style="display: block;"></a><div id="thirdInner" class="third-inner">
-            <p>From virtual assistants to self-driving cars, AI has revolutionized numerous industries and has become an indispensable tool for solving some of the world's most complex problems. With Github Copilot, AI is changing the way we write code and speeding up the development process. From Chess to Go, board games have long been a testing ground for AI, challenging machine learning algorithms to outsmart even the most skilled human players.</p>
-        </div></a>
+        <img class="presenter" id="presenter" src="./pics/Apdata_Robot-removebg-preview.png"></a>
+        <div id="thirdInner" class="third-inner">
+            <p>From virtual assistants to self-driving cars, AI has revolutionized numerous industries and has become an indispensable tool for solving some of the world's most complex problems. With Github Copilot, AI is changing the way we write code and speeding up the development process. From Chess to Go, board games have long been a testing ground for AI, challenging machine learning algorithms to outsmart skilled human players.</p>
+            <a style="color: rgb(121, 99, 0);" href="./pages/current-aplication.html">read more</a>
+        </div>
     </div>
     <div class="fourth">
         <div class="future">
             <p> AI allows healthcare professionals to better understand the patterns and needs of their patients through in-depth data analysis. </p>
             <p> With tech giants investing heavily in healthcare innovation, AI has <br> received a massive boost <br>in recent years. </p>
         </div>
+        <p style="position: absolute; bottom: 4%; left: 47%;"> <a style="color: aqua;" href="./pages/detailed-future-applications.html"> read more </a></p>
     </div>
-
     <div class="fifth">
         <div class="fifth-inner">
             <p class="ethics-text">The legal and ethical issues that confront society due to Artificial Intelligence (AI) include privacy and surveillance, bias or discrimination, and potentially the philosophical challenge is the role of human judgment</p>
-            <p class="ethics-definition">AI ethics is a set of guidelines that advise on the design and outcomes of artificial intelligence.</p>
+            <p class="ethics-definition">AI ethics is a set of guidelines that advise on the design and outcomes of artificial intelligence.<br> <a style="color: aqua;" href="./pages/Ethics-page.html">read more</a></p>
         </div>
         <div id="stars"><img class="stars" src="./pics/25039-5-star.png"></div>
     </div>
