links added to all pages

--- a/pages/current-aplication.html
+++ b/pages/current-aplication.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="wrapper">
+        <a style="color: aqua; display: block; transform: translate(80px, 80px);" href="../index.html">back to main</a>
         <img src="../assets/wallpapers/Hexagon (1).svg" class="background">
         <h1 class="title">Top AI applications in 2023</h1>
         <div class="container1">
