--- a/pages/Ethics-page.html
+++ b/pages/Ethics-page.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="wrapper">
+        <a style="color: aqua; display: block; transform: translate(80px, 80px);" href="../index.html">back to main</a>
         <img src="../assets/wallpapers/Animated Shape (3).svg" class="background">
         <h1 class="title">Top AI Ethical Dilemmas</h1>
         <div class="container1">
