--- a/pages/detailed-history.html
+++ b/pages/detailed-history.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/detailed-history-style.css">
     <title>Detailes history</title>
-</head>
+</head> 
 <body>
     <div class="wrapper">
+        <a style="color: aqua; display: block; transform: translate(80px, 80px);" href="../index.html">back to main</a>
         <img src="../assets/wallpapers/Polygon Luminary.svg" class="background">
         <h1 class="detailed-history-title">Artificial Intelligence History</h1>
         <div class="container1">
